@@ -1,6 +1,9 @@
 Changes to Version 2.0-16
+  
+    o Fixed bug in printing of hypotheses by linearHypothesis(), where numeric
+constants of the form 1.* or -1.* were printed incorrectly (reported by Johannes Kutsam).
 
-    o fixed a bug in showLabels() with multiple groups in the scatterplot() and scatterplotMatrix() function
+    o Fixed a bug in showLabels() with multiple groups in the scatterplot() and scatterplotMatrix() function
     
     o linearHypothesisTest() now tolerates newlines and tabs in hypotheses (suggestion of David Hugh-Jones).
 
